--- a/index.ipynb
+++ b/index.ipynb
@@ -408,7 +408,7 @@
     }
    ],
    "source": [
-    "bar_trace_first_three_areas = {'type': 'bar', 'x': [cities[0]['Areas'], cities[1]['Areas'], cities[2]['Areas'] ], 'y': cities[0][, 'text': []}\n",
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': [cities[0]['Areas'], cities[1]['Areas'], cities[2]['Areas'] ], 'y': , 'text': []}\n",
     "bar_trace_first_three_pops = {'type': 'scatter', 'x': [], 'y': [], 'text': []}"
    ]
   },
