Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -408,8 +408,8 @@
     }
    ],
    "source": [
-    "x_a\n",
-    "bar_trace_first_three_areas = {'type': 'bar', 'x': , 'y': [], 'text': []}\n",
+    "x_val_areas= [cities[0]['Areas'], cities[1]['Areas'], cities[2]['Areas'] ]\n",
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': x_val_areas, 'y': [], 'text': []}\n",
     "bar_trace_first_three_pops = {'type': 'scatter', 'x': [], 'y': [], 'text': []}"
    ]
   },
