Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -409,6 +409,7 @@
    ],
    "source": [
     "x_val_areas= [cities[0]['Areas'], cities[1]['Areas'], cities[2]['Areas'] ]\n",
+    "y_val_areas\n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': x_val_areas, 'y': [], 'text': []}\n",
     "bar_trace_first_three_pops = {'type': 'scatter', 'x': [], 'y': [], 'text': []}"
    ]
