Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -410,7 +410,8 @@
    "source": [
     "x_val_areas= [cities[0]['City'], cities[1]['City'], cities[2]['City'] ]\n",
     "y_val_areas = [cities[0]['Areas'], cities[1]['Areas'], cities[2]['Areas'] ]\n",
-    "bar_trace_first_three_areas = {'type': 'bar', 'x': x_val_areas, 'y': [], 'text': []}\n",
+    "text_values\n",
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': x_val_areas[], 'y': y_val_areas[], 'text': []}\n",
     "bar_trace_first_three_pops = {'type': 'scatter', 'x': [], 'y': [], 'text': []}"
    ]
   },
