Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,12 +400,12 @@
     "y_val_areas = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area'] ]\n",
     "text_values\n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': x_val_areas, 'y': y_val_areas, 'text': text_values}\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'x': x_values, 'y': [], 'text': []}"
+    "bar_trace_first_three_pops = {'type': 'scatter', 'x': x_values, 'y': y_values, 'text': []}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -415,9 +415,17 @@
         {
          "text": [],
          "type": "scatter",
-         "uid": "d6d485b2-07a2-11e9-824a-65017b08ea23",
-         "x": [],
-         "y": []
+         "uid": "fb28d27e-07a2-11e9-824a-65017b08ea23",
+         "x": [
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
+         ],
+         "y": [
+          2891000,
+          2800000,
+          2581000
+         ]
         },
         {
          "text": [
@@ -426,7 +434,7 @@
           "Pyeongchang"
          ],
          "type": "bar",
-         "uid": "d6d4885a-07a2-11e9-824a-65017b08ea23",
+         "uid": "fb28d5b2-07a2-11e9-824a-65017b08ea23",
          "x": [
           "Buenos Aires",
           "Toronto",
@@ -442,10 +450,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"1b4796c4-ff6e-4233-9758-7ad6c19dacfa\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"1b4796c4-ff6e-4233-9758-7ad6c19dacfa\", [{\"text\": [], \"x\": [], \"y\": [], \"type\": \"scatter\", \"uid\": \"d6db9faa-07a2-11e9-824a-65017b08ea23\"}, {\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"d6dba1f8-07a2-11e9-824a-65017b08ea23\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"bd3bf34e-c7df-450e-bb90-5b41454b9978\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"bd3bf34e-c7df-450e-bb90-5b41454b9978\", [{\"text\": [], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"scatter\", \"uid\": \"fb3826ca-07a2-11e9-824a-65017b08ea23\"}, {\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"fb382896-07a2-11e9-824a-65017b08ea23\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"1b4796c4-ff6e-4233-9758-7ad6c19dacfa\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"1b4796c4-ff6e-4233-9758-7ad6c19dacfa\", [{\"text\": [], \"x\": [], \"y\": [], \"type\": \"scatter\", \"uid\": \"d6db9faa-07a2-11e9-824a-65017b08ea23\"}, {\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"d6dba1f8-07a2-11e9-824a-65017b08ea23\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"bd3bf34e-c7df-450e-bb90-5b41454b9978\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"bd3bf34e-c7df-450e-bb90-5b41454b9978\", [{\"text\": [], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"scatter\", \"uid\": \"fb3826ca-07a2-11e9-824a-65017b08ea23\"}, {\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"fb382896-07a2-11e9-824a-65017b08ea23\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
